terminado menos la parte estetica

--- a/src/app/componentes/lista-cuchillos/lista-cuchillos.component.html
+++ b/src/app/componentes/lista-cuchillos/lista-cuchillos.component.html
@@ -14,6 +14,7 @@
         longitudHoja: {{ cuchillo.longitudHoja }} -
         longitudTotal: {{ cuchillo.longitudTotal }}
         <button (click)="borrarCuchillo($index)">Borrar cuchillo</button>
+        <button [routerLink]="['editar-cuchillo',$index]">Editar cuchillo</button>
       </li>
     }
   }
